# imiteitor

./: .dockerignore  .gitignore  Dockerfile  Makefile  Plan.md  README.md  docker-compose.yml  nginx.conf
.claude/: launch.json  settings.json
backend/: pyproject.toml
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: clips.py  transcribe.py  tts.py  voices.py
backend/app/services/: audio.py  stt.py  tts.py
backend/openspec/changes/docker-compose-production/: design.md  proposal.md  tasks.md
backend/openspec/changes/docker-compose-production/specs/docker-production/: spec.md
frontend/: package-lock.json  pnpm-lock.yaml
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: AudioRecorder.tsx  AudioUploader.tsx  ClipPlayer.tsx  InstructEditor.tsx  Layout.tsx
frontend/src/hooks/: useAudioRecorder.ts
frontend/src/pages/: GeneratePage.tsx  VoiceDetailPage.tsx  VoicesPage.tsx
frontend/src/styles/: globals.css
openspec/changes/archive/2026-03-11-dev-network-access/: design.md  proposal.md  tasks.md
openspec/changes/remove-mlx-add-cuda/: design.md  proposal.md  tasks.md
openspec/changes/remove-mlx-add-cuda/specs/cuda-stt/: spec.md
openspec/changes/remove-mlx-add-cuda/specs/cuda-tts/: spec.md
openspec/specs/dev-lan-access/: spec.md
